--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "hubot-rules": "^0.1.1",
     "hubot-scripts": "^2.17.2",
     "hubot-shipit": "^0.2.0",
-    "hubot-slack": "^4.3.4"
+    "hubot-slack": "^4.3.4",
+    "thronemaster-tools": "^1.0.2"
   },
   "engines": {
     "node": "6.10.3"
   },
   "devDependencies": {
-    "child_process": "^1.0.2"
+    "child_process": "^1.0.2",
+    "thronemaster-tools": "^1.0.2"
   }
 }
